--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "eslint": "^7.32.0",
+    "nodemon": "2.0.15"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "4.17.2"
   }
 }
